Added mouse support to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,3 +9,7 @@ unbind-key h
 bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
+
+# Enable mouse support in tmux
+set-option -g mouse on
+
