--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
 set -g default-terminal "screen-256color"
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'basic'
+
 # Remap window navigation to vim
 unbind-key j
 bind-key j select-pane -D
@@ -13,3 +18,4 @@ bind-key l select-pane -R
 # Enable mouse support in tmux
 set-option -g mouse on
 
+run '~/.tmux/plugins/tpm/tpm'
