Stopping OS from chaging tmux window name

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,4 +18,7 @@ bind-key l select-pane -R
 # Enable mouse support in tmux
 set-option -g mouse on
 
+# Stop OS from renaming tmux windows
+set-option -g allow-rename off
+
 run '~/.tmux/plugins/tpm/tpm'
