Adding vim style navigation for copy/paste

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,4 +21,7 @@ set-option -g mouse on
 # Stop OS from renaming tmux windows
 set-option -g allow-rename off
 
+# Vim like navigation
+set-window-option -g mode-keys vi
+
 run '~/.tmux/plugins/tpm/tpm'
