--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,4 +24,9 @@ set-option -g allow-rename off
 # Vim like navigation
 set-window-option -g mode-keys vi
 
+# New window with default path set to last path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 run '~/.tmux/plugins/tpm/tpm'
