--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "screen-256color"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'basic'
 
@@ -28,5 +29,7 @@ set-window-option -g mode-keys vi
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 run '~/.tmux/plugins/tpm/tpm'
