reordering vi binding and add text selection Vi style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,14 +22,17 @@ set-option -g mouse on
 # Stop OS from renaming tmux windows
 set-option -g allow-rename off
 
-# Vim like navigation
-set-window-option -g mode-keys vi
-
 # New window with default path set to last path
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 set -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# Vim like navigation
+set-window-option -g mode-keys vi
+
+# Can select with vi binding
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 run '~/.tmux/plugins/tpm/tpm'
