increase tmux history and auto renumber windows when closing one

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,12 @@ set-option -g mouse on
 # Stop OS from renaming tmux windows
 set-option -g allow-rename off
 
+# Renumber windows after removing one
+set -g renumber-windows on
+
+# Keep plenty of history for scrollback
+set -g history-limit 10000
+
 # New window with default path set to last path
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
