--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,9 @@ set -g renumber-windows on
 # Keep plenty of history for scrollback
 set -g history-limit 10000
 
+# Reload tmux.conf with prefix-r
+bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
 # New window with default path set to last path
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
