--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,7 @@ set -g renumber-windows on
 # Keep plenty of history for scrollback
 set -g history-limit 10000
 
+
 # Reload tmux.conf with prefix-r
 bind C-r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
@@ -55,3 +56,6 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 
 run '~/.tmux/plugins/tpm/tpm'
+
+# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
+setw -g aggressive-resize off
