--- a/.verify/Dockerfile
+++ b/.verify/Dockerfile
@@ -4,6 +4,8 @@ RUN apt-get update && apt-get install -y curl
 # Install tzdata so we dont get timezone prompt during install
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
 
+COPY . /tmp/expected/
+
 COPY ./install.sh /tmp/install.sh
 RUN chmod +x /tmp/install.sh
 
