--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,7 +52,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # Vim like navigation
 set-window-option -g mode-keys vi
