--- a/.verify/Dockerfile
+++ b/.verify/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:latest
 RUN apt-get update && apt-get install -y curl
 # Install tzdata so we dont get timezone prompt during install
 RUN DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get -y install tzdata
+RUN apt update && apt install -y gcc make build-essential
 
 COPY . /tmp/expected/
 
